--- a/css/main.css
+++ b/css/main.css
@@ -1375,11 +1375,11 @@ ul.admin-nav {
   justify-content: flex-start;
 }
 a.admin-nav__link {
-  display: block;
-  text-decoration: none;
+  /*display: block;*/
+  text-decoration: underline;
   padding: 5px;
   margin-right: 25px;
-  color: #383737;
+  color: #037ec6;
   -webkit-transition: color, 1s;
   -o-transition: color, 1s;
   transition: color, 1s;
